fix confirm email send

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -131,3 +131,13 @@ ol ul {
 button {
   cursor: pointer;
 }
+
+@layer utilities {
+  .no-scrollbar::-webkit-scrollbar {
+    display: none; /* Chrome, Safari, and Opera */
+  }
+  .no-scrollbar {
+    -ms-overflow-style: none; /* IE and Edge */
+    scrollbar-width: none; /* Firefox */
+  }
+}
